[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://woosh.tscn" type="PackedScene" id=2]
[ext_resource path="res://top_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://bottom_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Game Jam Song.wav" type="AudioStream" id=5]
[ext_resource path="res://PopupDialog.tscn" type="PackedScene" id=6]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )
woosh = ExtResource( 2 )
popup = null

[node name="top_screen" parent="." index="0" instance=ExtResource( 3 )]

[node name="bottom_screen" parent="." index="1" instance=ExtResource( 4 )]

margin_top = 135.0
margin_bottom = 270.0

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="PopupDialog" parent="." index="4" instance=ExtResource( 6 )]

visible = false


